tests/baselines/reference/numericIndexerConstraint2.errors.txt
numericIndexerConstraint2.ts(4,1): error TS2322: Type '{ one: number; }' is not assignable to type '{ [index: string]: Foo; }'.
  Property 'one' is incompatible with index signature.
    Type 'number' is not assignable to type 'Foo'.


==== numericIndexerConstraint2.ts (1 errors) ====
    class Foo { foo() { } }
    var x: { [index: string]: Foo; };
    var a: { one: number; };
    x = a;
    ~
!!! error TS2322: Type '{ one: number; }' is not assignable to type '{ [index: string]: Foo; }'.
!!! error TS2322:   Property 'one' is incompatible with index signature.
!!! error TS2322:     Type 'number' is not assignable to type 'Foo'.